# ai-video-gen

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/ai_video_gen/: __init__.py  config.py  main.py
backend/src/ai_video_gen/api/: __init__.py  compose.py  narration.py  pipeline.py  preferences.py  projects.py  router.py  visuals.py  ws.py
backend/src/ai_video_gen/feedback/: __init__.py  correction_store.py  preference_engine.py  prompt_evolver.py  visual_diff.py
backend/src/ai_video_gen/models/: __init__.py  schema.py
backend/src/ai_video_gen/pipeline/: __init__.py  compose.py  narration.py  script.py  visuals.py
backend/src/ai_video_gen/services/: __init__.py  claude.py  elevenlabs.py  ffmpeg.py  gemini.py  slide_renderer.py  supabase.py
backend/src/ai_video_gen/templates/: slide.html
backend/tests/: __init__.py  conftest.py  test_api.py  test_feedback.py  test_pipeline.py  test_schema.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/preferences/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/hooks/: usePipeline.ts  usePreferences.ts  useProject.ts  useUndoRedo.ts
frontend/src/lib/: api.ts  supabase.ts
frontend/src/types/: index.ts
supabase/migrations/: 001_projects.sql  002_sections.sql  003_corrections.sql  004_preferences.sql
(+4 files in other folders)
